Formatted <img> elements for borders, padding, and margins; added row class div surrounding img 3-7 and 3-8 to center appearance.

--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
                 area, i.e., the force intensity, or shall we say “load per unit tire”. If the load reaches 4.5 tons per
                 tire, beware!
               </p>
-              <div class="row justify-items-center align-items-start">
-              <img src="img/3-7.jpeg" class="center"
+              <div class="row d-flex align-items-start justify-content-center">
+              <img src="img/3-7.jpeg" class=""
                 alt="Figure 3.7 Cartoon rendering of Hell’s Backbone Bridge in southern Utah, north of Escalante. [Artwork by D. A. Fischer.]">
-              <img src="img/3-8.jpeg" class="center"
+              <img src="img/3-8.jpeg" class=""
                 alt="Figure 3.8 Photograph of sign near bridge, informing drivers of the magnitude of reaction forces that the bridge is capable of exerting. Beware of exceeding the limit! [Photograph by G. H. Davis.]">
               </div>
               </article>
@@ -249,12 +249,12 @@
                 (Figure 3.10B). The arithmetic is straightforward: the normal force (F<sub>N</sub>) is the product of
                 the F x cos θ, and the shear force (F<sub>S</sub>) is the product of F x sin θ (see Figure 3.10B).
               </p>
-              <div class="row align-items-center justify-content-center">
-                <div class="col-md">
+              <div class="row d-flex align-items-start justify-content-center">
+                <div class="px-1">
                   <img src="img/3-10.jpeg" class="center"
                     alt="Figure 3.10 Resolution of forces: suspended block, a physics demonstration car- ried out at The University of Texas, Austin. See text for explanation. (A) The set up. (B) A vertical force (F) of 1500g is exerted upon an inclined plane. The normal to the inclined plane departs from vertical by an angle of θ = 40. F can be resolved into a normal force (FN) acting perpendicular to the inclined plane and a shear force (FS) acting parallel to the inclined plane.">
                 </div>
-                <div class="col-md h-100">
+                <div class="px-1">
                   <img src="img/3-11.jpeg" class="center"
                     alt="Figure 3.11 The veracity of resolution of forces can be demonstrated by removing the inclined plane and observing the block suspended motionless in static equi- librium. Voila. [Courtesy of http://www.ph. utexas.edu/$phy-demo/demo-txt/1j30-10.html, accessed March 27, 2011.]">
                 </div>
